without firebase (works)

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Personal Secretary
+      Learning words
     </ion-title>
     <ion-buttons end>
       <button ion-button tappable (click)="presentNotifications($event)">
